      double precision loses accuracy.  The default \code{exact = "allow.loss"}
      allows accuracy loss, as in all \R versions before 3.1.0.

      \item For some compiler versions, integer addition could accidentally
      overflow (without a warning).  \R's internal code should be more
      \dQuote{robust} now, thanks to Hervé Pagès.  (\PR{15774})
    }
  }

  \subsection{INSTALLATION and INCLUDED SOFTWARE}{
    \itemize{
      \item The included version of PCRE has been updated to 8.35.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item When \code{attach()} notices conflicts, it does so
      compatibly with \code{library()}, using \code{message()}.

      \item \command{R CMD Sweave} no longer cleans any files,
      compatibly with versions of \R prior to 3.1.0.

      \item \code{dbinom(x,n)}, \code{pbinom()}, \code{dpois()}, etc,
      are slightly less restrictive in checking if \code{n} is
      integer-valued.  (Wish of \PR{15734}.)

      \item \code{pchisq(x, df, ncp, log.p = TRUE)} is more accurate and
      no longer underflows for small \code{x} and \code{ncp < 80}, e.g,
      for \code{pchisq(1e-5, df = 100, ncp = 1, log = TRUE)}.
      (Based on \PR{15635} and a suggestion by Roby Joehanes.)

      \item The \code{s} (\dQuote{step into}) command in the debugger
      would cause \R to step into expressions evaluated there,
      not just into functions being debugged.  (\PR{15770})

      \item The third-party code used by \code{strptime()} rejected
      time-zone offsets of more than \code{+1200} (\code{+1245},
      \code{+1300} and \code{+1400} can occur).  (\PR{15768})

      \item (Windows only.)
      \code{png(type = "cairo", antialias = "gray")}
      was not accepted.  (\PR{15760})

      \item Use of \code{save(..., envir=)} with named objects could
      fail.  (\PR{15758})

      \item \code{Sweave()} mis-parsed \samp{Sexpr} expressions that
      contained backslashes.  (\PR{15779})
